--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -65,7 +65,11 @@
         vopoHead.parentNode.insertBefore(script, vopoHead);
       })();
     </script>
-
+<style>
+  variant-radios {
+    display: none !important;
+  }
+  </style>
 
     {% style %}
     {{
