--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -17,7 +17,7 @@
   <h1 class="title">
     {{ 'templates.404.title' | t }}
   </h1>
-  <a href="https://saunadev.myshopify.com/products?filter=all" class="btn">
+  <a href="/products?filter=all" class="btn">
     {{ 'general.continue_shopping' | t }}
   </a>
 </div>
