--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -45,7 +45,7 @@
 <cart-items class="page-width{% if cart == empty %} is-empty{% else %} section-{{ section.id }}-padding{% endif %}">
   <div class="cart__warnings" style="margin-bottom: rem">
     <h1 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h1>
-    <a href="https://saunadev.myshopify.com/products?filter=all" class="btn">
+    <a href="/products?filter=all" class="btn">
       {{ 'general.continue_shopping' | t }}
     </a>
 
