--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -474,6 +474,7 @@
                 </div>
 
                 {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
+                  <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}" disabled>
                   <div class="product-form__buttons">
                     <button
                       type="submit"
@@ -550,32 +551,7 @@
               </div>
             {% endif %}
             
-            <div class="pay-over-time">
-                <div class="pot-head">Pay Over Time</div>
-                <div class="pot-col">
-                    <img src="{{ 'splitit.svg' | asset_url }}" width="60" alt="SplitIt" loading="lazy" />
-                    <span data-ml="splitItSummary"><p>Monthly payments using your credit card. 0% interest.</p></span>
-                    <a href="javascript:void(0)" onClick="potMore('splitit')">Learn More</a>
-                </div>
-                <div class="pot-divider"></div>
-                <div class="pot-col">
-                    <img src="{{ 'bread.png' | asset_url }}" width="60" alt="Bread Financing" loading="lazy" />
-                    <span data-ml="breadSummary"><p>Simple loan with monthly payments as low as 0% APR for 6 months.*</p></span>
-                    <a href="javascript:void(0)" onClick="potMore('bread')">Learn More</a>
-                </div>
-                <div class="pot-col-100 hideMe" id="splititCol">
-                    <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15" loading="lazy" /></a>
-                    <img src="{{ 'splitit.svg' | asset_url }}" width="70" alt="SplitIt" />
-                    <span data-ml="splitItText"><ul><li>0% interest</li><li>Monthly payments on your existing credit card</li><li>Keep earning rewards from your credit card</li><li>No credit check needed to qualify</li><li>Choose from 2-12 month payment plans.</li></ul></span>
-                    <p class="fineprint">You can choose this option at checkout.</p>
-                </div>
-                <div class="pot-col-100 hideMe" id="breadCol">
-                    <a href="javascript:void(0)" class="pot-close"><img src="{{ 'close.svg' | asset_url }}" alt="Close" style="width: 15" height="15"  loading="lazy"/></a>
-                    <img src="{{ 'bread.png' | asset_url }}" width="70" alt="Bread Financing" />
-                    <span data-ml="breadText"><ul><li>Starting at 0% APR for 6 months*</li><li>Traditional installment loan</li><li>Check your rate without affecting your credit score</li></ul><p>*Subject to approval of credit application. Rates range from 0% to 29.99% APR, resulting in, for example, 24 monthly payments of $46.14 at 9.99% APR, per $1,000 borrowed. APRs will vary depending on credit qualifications, loan amount, and term. Bread<sup>®</sup>&nbsp;pay-over-time plans are loans made by Comenity Capital Bank.</p></span>
-                    <p class="fineprint">Check your eligibility in minutes at checkout.</p>
-                </div>
-            </div>
+            {% render 'pay-over-time' %}
             <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em; display: none;">
               {% assign current_variant = product.selected_or_first_available_variant %}
                 <strong>SKU: </strong>
@@ -760,6 +736,8 @@
   	{% if product.metafields.my_fields.features_section_4 != blank %}
 		{{ product.metafields.my_fields.features_section_4 }}
     {% endif %}
+
+
   <section class="yotpo-containers page-width section-{{ section.id }}-padding">
     <h2>Reviews and Questions</h2>
   	<div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: "large" |replace: '?', '%3F' | replace: '&','%26'}}" data-description="{{ product.description | escape }}"></div>
@@ -798,14 +776,6 @@ $(".product-info-tab").on("click",function() {
 	$("#pid-" + whichTab).removeClass("hideMe");
 });
 
-//swapping out tiles in related products based on color choices is in global.js.
-
-
-$(".pot-col-100").on("click",function() {
-	$(this).addClass("hideMe");
-	$(".pot-col").removeClass("hideMe");
-});
-
 
 var currentRelatedCarouselWidth=$(".related-carousel").width() + 40;
 
@@ -834,10 +804,6 @@ function showGalleryHero(n,colorCode) {
 	}
 }
 
-function potMore(f) {
-	$(".pot-col").addClass("hideMe");
-	$("#" + f + "Col").removeClass("hideMe");
-}
 
 
 let options = {
