--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -113,9 +113,14 @@ div#main-cart-footer {
 @media screen and (min-width: 750px) {
   .cart__footer.yc-cols > div {
     flex: 0 0 calc(33.33% - 3rem);
+    width: auto;
+    margin: 0;
 }
   .cart-item__image {
     max-width: 100%;
+  }
+  .yc-cols {
+    flex-direction: row;
   }
 }
 
@@ -307,8 +312,6 @@ cart-remove-button .icon-remove {
     gap: 1.5rem;
     margin-bottom: 3.5rem;
     width: 100%;
-    vertical-align: top;
-    border: 1px solid #eee;
     padding: 0 3rem;
   }
 
@@ -321,8 +324,8 @@ cart-remove-button .icon-remove {
   }
 
   tr.cart-item td {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
     text-align: center;
     border: 0;
@@ -338,6 +341,10 @@ cart-remove-button .icon-remove {
 .cart-item .quantity {
   position: static;
   margin: 0 auto;
+}
+
+td.cart-item__details .op-30day {
+  margin-top: 10px;
 }
 
   .cart-item:last-child {
@@ -407,7 +414,7 @@ p.fineprint.oos-fineprint {
   }
 
   .cart-item > td + td {
-    padding-left: 0rem;
+    padding: 30px 15px;
   }
 td.cart-item__price {
     
@@ -492,5 +499,15 @@ td.cart-item__price .product-option s{
   }
 
 }
+
+
+@media only screen and (min-width: 750px)  {
+  .ycf-box.hideMe, .yc-shipping.hideMe {
+    display: block;
+  }
+  
+
+}
+
 
 
