--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -438,6 +438,9 @@
       "base.css" | asset_url | stylesheet_tag
     }}
     {{
+      "brian.css" | asset_url | stylesheet_tag
+    }}
+    {{
       "dark.css" | asset_url | stylesheet_tag
     }}
 
@@ -655,5 +658,44 @@ function myFunction() {
     {% if shop.metafields.qimify_minicart.script_src %}
 <script type="text/javascript" src="{{ shop.metafields.qimify_minicart.script_src }}&shop={{shop.permanent_domain }}" async="async"></script>
 {% endif %}
+
+<script>
+  {% if product %}
+  var _learnq = _learnq || [];
+function addedToCart() {
+  fetch(`${window.location.origin}/cart.js`)
+  .then(res => res.clone().json().then(data => {
+    var cart = {
+      total_price: data.total_price/100,
+      $value: data.total_price/100,
+      total_discount: data.total_discount,
+      original_total_price: data.original_total_price/100,
+      items: data.items
+    }
+    if (item !== 'undefined') {
+      cart = Object.assign(cart, item)
+    }
+    _learnq.push(['track', 'Added to Cart', cart])
+  }))
+} 
+(function (ns, fetch) {
+  ns.fetch = function() {
+    const response = fetch.apply(this, arguments);
+    response.then(res => {
+      if (`${window.location.origin}/cart/add.js`
+      	.includes(res.url)) {
+        	addedToCart()
+      }
+    });
+    return response
+  }
+}(window, window.fetch))
+$(document).ajaxComplete(function(event, request, settings){
+  if(settings.url == "/cart/add.js"){
+      addedToCart()
+  }
+})
+  {% endif %}
+</script>
   </body>
 </html>
