--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -552,7 +552,7 @@
             {% endif %}
             
             {% render 'pay-over-time' %}
-            <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em; display: none;">
+            <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em;">
               {% assign current_variant = product.selected_or_first_available_variant %}
                 <strong>SKU: </strong>
                 <span class="theSKU">
