--- a/assets/base.css
+++ b/assets/base.css
@@ -475,6 +475,9 @@ table:not([class]) th {
   .small-hide {
     display: none !important;
   }
+  .card__inner {
+	  width: 83% !important;
+  }
 }
 
 @media screen and (min-width: 750px) and (max-width: 989px) {
