--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -705,8 +705,5 @@ $(document).ajaxComplete(function(event, request, settings){
 })
   {% endif %}
 </script>
-  <script src="https://myminicart.pro/mini/js/minicart.js"></script>
-  <div class="sd_dropdown-mini-cart"><div class="sd_dropdown-minibag"> BAG <span class="dropcount"></span></div><div class="sd_dropdown-inner-area"><div class="sd_dropdown-cart-items"></div> </div></div>																
-
-  {% include 'mini-ajax-cart' %}</body>
+  </body>
 </html>
