--- a/sections/careers-page.liquid
+++ b/sections/careers-page.liquid
@@ -18,8 +18,8 @@
 
 <div class="generic-headerBG noMargin">
     <div class="generic-header">
-        <div class="gh-text">
-            <cms id='cms0'>
+        <div class="gh-text container">
+            <cms id='cms0' class="row">
                 <h1>Careers</h1>
                 <p class="etica">Wanted: Forward-Thinkers, Lifelong <br/>Learners, and Multi-Talented Misfits</p>
             </cms cms0>
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<div class="inro">
+<div class="intro">
     <div class="container">
         <div class="inner-content row">
             <div class="col-12">
@@ -133,8 +133,8 @@
             <div class="col-12">
                 <h2>Craft Artisan Team Member</h2>
                 <img src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/pin.svg?v=1653621832" alt="map pin icon" loading="lazy">
-                <span>Location: Columbia, MO</span>
-                <p><strong>Looking for a job you can feel good about? </strong></p>
+                <span class="mono-type">Location: Columbia, MO</span>
+                <p style="margin-top: 1rem;"><strong>Looking for a job you can feel good about? </strong></p>
                 <p>
                     SaunaSpace is looking for a Production Team Member to join our passionate team. We're looking for someone with a dedicated work ethic, who can work both independently and collaboratively, exhibits a can-do attitude, and genuinely enjoys learning new things. The ideal candidate will be self-motivated, detail-oriented, and take pride in their work. The role of Production Team Member is essential to supporting our growing operation and contributes in meaningful ways throughout the production process.  
                 </p>
@@ -277,7 +277,7 @@
                         For questions, call Lacy at <a href="tel:5733701217">(573) 370-1217</a>
                     </li>
                 </ul>
-                <h3><a href="mailto:hr@sauna.space">Apply Now</a></h3>
+                <p><strong><a href="mailto:hr@sauna.space">Apply Now</a></strong><img src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/a79409d4-email-icon.svg?v=1653623546" alt="email" loading="lazy"></p>
                 <p><em>We are an equal opportunity employer and all qualified applicants will receive consideration for employment without regard to race, color, religion, sex, national origin, disability status, protected veteran status, or any other characteristic protected by law.</em></p>
             </div>
         </div>
