--- a/sections/careers-page.liquid
+++ b/sections/careers-page.liquid
@@ -14,7 +14,7 @@
 
 <noscript>{{ "section-main-page.css" | asset_url | stylesheet_tag }}</noscript>
 <noscript>{{ "component-rte.css" | asset_url | stylesheet_tag }}</noscript>
-<noscript>{{ "headsup.css" | asset_url | stylesheet_tag }}</noscript>
+<noscript>{{ "careers.css" | asset_url | stylesheet_tag }}</noscript>
 
 <div class="generic-headerBG noMargin">
     <div class="generic-header">
@@ -67,13 +67,13 @@
     </div>
 </div>
 
-<div class="self">
+<div class="people">
     <div class="container">
         <div class="inner-content row">
-            <div class="col-5">
+            <div class="col-7">
                 <img src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/oixke8-fece3aa7-dbdb-4fcd-89bd-ab666ef1ee8d-1-105-c_10hn0nk0fa0ix02d00001o.jpg?v=1653621324" alt="people first, always" loading="lazy">
             </div>
-            <div class="col-7">
+            <div class="col-5">
                 <h3 class="text-uppercase">People First, Always</h3>
                 <p>
                     We're a diverse team of forward-thinkers, lifelong learners, and multi-talented misfits from all kinds of backgrounds. We hire based foremost on integrity, invest in on-the-job training, and work with your strengths to help you reach your full potential. Every employee is paid a sustainable living wage and receives a very competitive benefits package.
@@ -121,7 +121,12 @@
         <div class="row">
             <div class="col-12">
                 <h2>Current Openings</h2>
-                <p><a href="#artisan">Craft Artisan Team Member</a></p>
+                <p>
+                <a href="#artisan"><span>
+                    <strong>Craft Artisan Team Member </strong> <img src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/46d4ea15-black-arrow.svg?v=1653622579"  alt="right arrow" loading="lazy">
+                </span>
+            </a>
+            </p>
             </div>
         </div>
     </div>
@@ -268,7 +273,7 @@
                         Walk-in applicants should bring their resume or completed application between the hours of 6 a.m. and 3 p.m., Monday–Friday
                     </li>
                     <li>
-                        Applications may be printed from <strong>https://go.sauna.space/application</strong>
+                        Applications may be printed from <strong><a href="https://go.sauna.space/application" target="_blank">https://go.sauna.space/application</a></strong>
                     </li>
                     <li>
                         Approved applications will be invited to interview by appointment only
