--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -102,7 +102,7 @@
       <cms id='cms4'>
 <h3>Join the SaunaSpace team</h3>
 <p>We take our employees’ happiness as seriously as our customers’ wellbeing. Learn what it means to be part of a hardworking, imaginative team.</p>
-<a href="https://careers.sauna.space/">View Openings</a>
+<a href="https://sauna.space/pages/careers">View Openings</a>
 </cms cms4>
     </div>
     <div class="col col-bordered col-bordered-center">
