--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -26,6 +26,8 @@
 					<a href="https://www.instagram.com/saunaspace/" target="_blank" class="social instagram"></a>
 					<a href="https://www.facebook.com/saunaspace/" target="_blank" class="social facebook"></a>
 					<a href="https://twitter.com/saunaspace" target="_blank" class="social twitter"></a>
+          <a href="https://youtube.com/saunaspace" target="_blank" class="social youtube"></a>
+
 				</div>
 			</div>
 			<div class="footer-links">
@@ -66,13 +68,14 @@
 						<a href="/pages/financing">Financing</a>
 						<a href="/pages/100-day-home-trial">100-Day Home Trial</a>
 						<a href="/pages/contact">Contact Us</a>
+            <a href="/account">Account</a>
 					</div>
 					<div class="fl-col">
 						<div class="fl-head">Company</div>
 						<a href="/pages/about">About Us</a>
 						<a href="/pages/events">Events</a>
 						<a href="https://saunaspace.refersion.com/">Affiliate Program</a>
-						<a href="https://careers.sauna.space/">Jobs</a>
+						<a href="https://sauna.space/pages/careers">Jobs</a>
 					</div>
 				</div>
 				<div class="copyright">&copy; 2013-<script> document.write(new Date().getFullYear());</script> SaunaSpace<sup>&reg;</sup>
