--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -134,6 +134,7 @@ and (min-width: 750px) { .section-header { margin-bottom:
   <a href="/pages/financing" class="util-nav-link">Financing</a>
   <a href="https://help.sauna.space" class="util-nav-link">Support & FAQ</a>
   <a href="/pages/contact" class="util-nav-link">Contact Us</a>
+  <a href="/account" class="util-nav-link">Login</a>
   <a href="javascript:void(0)" class="util-nav-link goDark">Dark Mode</a>
   <input type="checkbox" id="ham" class="hiddenCB" /><label
     class="hamb-label"
@@ -156,6 +157,7 @@ and (min-width: 750px) { .section-header { margin-bottom:
       >Support & FAQ</a
     >
     <a href="/contact" class="ham-link nav-link-arrow">Contact Us</a>
+    <a href="/account" class="ham-link nav-link-arrow">Login</a>
     <a href="javascript:void(0)" class="ham-link nav-link-arrow goDark"
       >Dark Mode</a
     >
