--- a/sections/headsuphealth-page.liquid
+++ b/sections/headsuphealth-page.liquid
@@ -33,14 +33,13 @@
             WITH HEADS UP
           </h2>
           <p class="mono-type">
-            Free 90-day membership with your SaunaSpace purchase*
+            Free 90-day app membership with your purchase over $999.
           </p>
         </div>
         <a
           class="btn-cta"
-          href="https://app.headsuphealth.com/users/sign_up?ref=saunaspace"
-          target="_blank"
-          >START YOUR FREE TRIAL
+          href="/pages/infrared-saunas"
+          >SHOP NOW
         </a>
       </div>
     </div>
@@ -122,12 +121,6 @@
         <p>Goal setting and progress monitoring help you stay motivated.</p>
       </div>
     </div>
-    <a
-      href="https://app.headsuphealth.com/users/sign_up?ref=saunaspace"
-      target="_blank"
-      class="btn-cta text-uppercase"
-      >Try It Free*</a
-    >
   </div>
 </div>
 
@@ -189,10 +182,9 @@
           Optimize your sauna sessions and your health with Heads Up today.
         </p>
         <a
-          href="https://app.headsuphealth.com/users/sign_up?ref=saunaspace"
-          target="_blank"
+          href="/pages/infrared-saunas"
           class="btn-cta"
-          >Sign Up Now</a
+          >SHOP NOW TO START TRACKING</a
         >
       </div>
     </div>
