--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -125,10 +125,9 @@
       <button>
         {{ 'customer.login_page.sign_in' | t }}
       </button>
-
-      <a href="{{ routes.account_register_url }}">
-        {{ 'customer.login_page.create_account' | t }}
-      </a>
+      <div>
+      <p>Don't have an account? For speedy checkout and to lookup your order history and saved addresses, <a href="{{ routes.account_register_url }}" class="login-create">create one </a>. </p>
+    </div>
       
     {%- endform -%}
   </div>
